; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_ndrv.c_ndrv_disconnect.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_ndrv.c_ndrv_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.ndrv_cb = type { i64 }

@EINVAL = common dso_local global i32 0, align 4
@ENOTCONN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket*)* @ndrv_disconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ndrv_disconnect(%struct.socket* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.socket*, align 8
  %4 = alloca %struct.ndrv_cb*, align 8
  store %struct.socket* %0, %struct.socket** %3, align 8
  %5 = load %struct.socket*, %struct.socket** %3, align 8
  %6 = call %struct.ndrv_cb* @sotondrvcb(%struct.socket* %5)
  store %struct.ndrv_cb* %6, %struct.ndrv_cb** %4, align 8
  %7 = load %struct.ndrv_cb*, %struct.ndrv_cb** %4, align 8
  %8 = icmp eq %struct.ndrv_cb* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @EINVAL, align 4
  store i32 %10, i32* %2, align 4
  br label %21

11:                                               ; preds = %1
  %12 = load %struct.ndrv_cb*, %struct.ndrv_cb** %4, align 8
  %13 = getelementptr inbounds %struct.ndrv_cb, %struct.ndrv_cb* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %11
  %17 = load i32, i32* @ENOTCONN, align 4
  store i32 %17, i32* %2, align 4
  br label %21

18:                                               ; preds = %11
  %19 = load %struct.ndrv_cb*, %struct.ndrv_cb** %4, align 8
  %20 = call i32 @ndrv_do_disconnect(%struct.ndrv_cb* %19)
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %18, %16, %9
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local %struct.ndrv_cb* @sotondrvcb(%struct.socket*) #1

declare dso_local i32 @ndrv_do_disconnect(%struct.ndrv_cb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
